Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129329

QML Preview doesn't update properly

    XMLWordPrintable

Details

    • 9a9a2184c (dev), 18a066a0b (6.8), 3aedb6a01 (6.7), f32fd1e00 (tqtc/lts-6.5), 618720a3a (dev), 09f5ae290 (6.9), 2e1c6757e (6.8)

    Description

      The QML preview does not update properly.

      Observations so far: The preview starts up and properly shows initial content. Later, the preview is re-done when the source changes (visibly by the flickering of the toplevel, but also in the communication) but keeps showing the original content.

      I use a standard "Qt Quick Application" project generated from the wizard and the Main.qml there as test. At the time the preview should update there are three copies of Main.qml around (in the sources, in the build folder, and encoded in some .rcc/*.cpp). There are two visible "Main.qml" nodes in the project tree: the one in the sources and one in the .qrc .

      When changing the source Main.qml, only that changes on disk, the build folder (expectedly) stays at the original content. The qmldebug server asks for  :/untitled31/Mail.qml, and contents is apparently taken from there, /possibly/ due to the presence of the Main.qml node in the resource part of the project tree.

       

      Attachments

        1. broken.txt
          10 kB
          Ulf Hermann
        2. fixed.txt
          10 kB
          Ulf Hermann
        3. Calculator - Proof 1080p.mov
          24.49 MB
          Irfan Omair

        Issue Links

          For Gerrit Dashboard: QTBUG-129329
          # Subject Branch Project Status CR V

          Activity

            People

              ulherman Ulf Hermann
              hjk hjk
              Votes:
              4 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: