QtQml: Disable AOT compiled code when QML-previewing

We cannot replace AOT-compiled compilation units while an object is
still holding on to them and we cannot delete all objects holding on to
a CU because they might not belong to the preview to begin with.

Pick-to: 6.8 6.5
Fixes: QTBUG-129329
Change-Id: Icbcb7822be770a440f3216955c0ae51151390e17
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>