src/plugins/qmltooling/qmldbg_preview/qqmlpreviewservice.cpp
@@ -120,8 +120,13 @@ void QQmlPreviewServiceImpl::engineAboutToBeRemoved(QJSEngine *engine)
 
 void QQmlPreviewServiceImpl::stateChanged(QQmlDebugService::State state)
 {
-    m_fileEngine.reset(state == Enabled ? new QQmlPreviewFileEngineHandler(m_loader.data())
-                                        : nullptr);
+    if (state == Enabled) {
+        QV4::ExecutionEngine::setPreviewing(true);
+        m_fileEngine.reset(new QQmlPreviewFileEngineHandler(m_loader.data()));
+    } else {
+        QV4::ExecutionEngine::setPreviewing(false);
+        m_fileEngine.reset();
+    }
 }
 
 void QQmlPreviewServiceImpl::forwardRequest(const QString &file)
