src/qml/jsruntime/qv4engine.cpp
@@ -105,7 +105,8 @@ using namespace QV4;
 // odd while the statics are being initialized, and stays even afterwards.
 // Any further engines created while the statics are being initialized busy-wait until engineSerial
 // is even.
-static QBasicAtomicInt engineSerial = Q_BASIC_ATOMIC_INITIALIZER(1);
+Q_CONSTINIT static QBasicAtomicInt engineSerial = Q_BASIC_ATOMIC_INITIALIZER(1);
+Q_CONSTINIT static QBasicAtomicInt hasPreview = Q_BASIC_ATOMIC_INITIALIZER(0);
 int ExecutionEngine::s_maxCallDepth = -1;
 int ExecutionEngine::s_jitCallCountThreshold = 3;
 int ExecutionEngine::s_maxJSStackSize = 4 * 1024 * 1024;
@@ -890,6 +891,12 @@ void ExecutionEngine::setProfiler(Profiling::Profiler *profiler)
     Q_ASSERT(!m_profiler);
     m_profiler.reset(profiler);
 }
+
+void ExecutionEngine::setPreviewing(bool enabled)
+{
+    hasPreview.storeRelease(enabled);
+}
+
 #endif // QT_CONFIG(qml_debug)
 
 void ExecutionEngine::initRootContext()
@@ -2206,7 +2213,9 @@ ExecutionEngine::DiskCacheOptions ExecutionEngine::diskCacheOptions() const
         return DiskCache::Disabled;
     static const DiskCacheOptions options = qmlGetConfigOption<
             DiskCacheOptions, transFormDiskCache>("QML_DISK_CACHE");
-    return options;
+    return hasPreview.loadAcquire()
+            ? (options & ~DiskCacheOptions(DiskCache::Aot)) // Disable AOT if preview enabled
+            : options;
 }
 
 void ExecutionEngine::callInContext(QV4::Function *function, QObject *self,
