src/qml/jsruntime/qv4engine_p.h
@@ -536,12 +536,14 @@ public:
 
     void setDebugger(Debugging::Debugger *) {}
     void setProfiler(Profiling::Profiler *) {}
+    static void setPreviewing(bool) {}
 #else
     QV4::Debugging::Debugger *debugger() const { return m_debugger.data(); }
     QV4::Profiling::Profiler *profiler() const { return m_profiler.data(); }
 
     void setDebugger(Debugging::Debugger *debugger);
     void setProfiler(Profiling::Profiler *profiler);
+    static void setPreviewing(bool enabled);
 #endif // QT_CONFIG(qml_debug)
 
     // We don't want to #include <private/qv4stackframe_p.h> here, but we still want
